--- a/src/app/components/letter.scss
+++ b/src/app/components/letter.scss
@@ -1,6 +1,6 @@
 .flex-item {
   margin: 5px;
-  //padding: 15px;
+  padding: 15px;
   color: black;
   font-family: monospace;
   font-weight: bold;
