--- a/src/app/components/letter.scss
+++ b/src/app/components/letter.scss
@@ -9,7 +9,7 @@
   flex: 1 0 auto;
   height: auto;
 
-  border: 2px solid rgb(96, 139, 168);
+  border: 2px solid cadetblue;
   border-radius: 5px;
   background-color: rgba(96, 139, 168, 0.2);
 }
@@ -28,5 +28,5 @@
 
 .clicked {
   @extend .hover;
-  background-color: chocolate;
+  background-color: cadetblue;
 }
