--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,9 @@ main, header, footer {
     text-align: center;
     background-color: #ffffff;
     padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
 }
 
 header {
