--- a/src/app/components/grid.scss
+++ b/src/app/components/grid.scss
@@ -17,6 +17,8 @@
 mat-grid-list {
   //max-width: 250px;
 }
-/*mat-grid-tile {
-  border: 1px solid;
-}*/
+/**/mat-grid-tile.letter {
+  border: 2px solid cadetblue;
+  border-radius: 5px;
+  background-color: rgba(96, 139, 168, 0.2);
+}/**/
